2025-03-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (dired-get-file-for-visit): Declare.
	(with-tramp-file-name-with-method): New macro.
	(tramp-revert-buffer-with-sudo): Autoload.  Preserve position.
	Use `with-tramp-file-name-with-method'.
	(tramp-dired-find-file-with-sudo): New command.

2025-03-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-get-method-parameter): Declare.
	(tramp-get-hash-table): Mark connection properties.
	(tramp-dump-connection-properties): Remove empty lists.
	(tramp-parse-connection-properties): Take connection property
	"completion-use-cache" into account.  (Bug#76950)

	* tramp-container.el (tramp-methods) <docker, dockercp, podman>
	<podmancp, kubernetes, toolbox, distrobox, flatpak, apptainer, nspawn>:
	Add `tramp-completion-use-cache' argument.

2025-03-12  Sean  Whitton <spwhitton@spwhitton.name>

	* tramp-message.el (tramp-debug-font-lock-keywords): Say "Lisp"
	not "Elisp".

2025-03-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el: Add Version, Package-Requires, Package-Type and URL
	keywords.

2025-02-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-mode): Set to nil on MS-DOS.

2025-02-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-list-remote-buffers)
	(tramp-list-remote-buffer-connections): Fix docstring.
	(tramp-cleanup-bufferless-connections): Use `string-join'.

	* tramp-sh.el (tramp-ssh-or-plink-options): Return always a
	string.  (Bug#76553)

2025-02-25  shipmints  <shipmints@gmail.com>

	* tramp-cmds.el:
	(tramp-list-remote-buffer-connections): New function.
	(tramp-cleanup-bufferless-connections): New command.
	(tramp-list-remote-buffers): Account for 'buffer-file-name'.

2025-02-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-executable): Use "command -pv", it
	better supported in different shells.  (Bug#76521)

2025-02-22  Michael Albinus  <michael.albinus@gmx.de>
