@@ -1,3 +1,9 @@
+2025-03-15  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-cmds.el (tramp-dired-buffer-command-completion-p):
+	New defun.
+	(tramp-dired-find-file-with-sudo): Declare `completion'.
+
 2025-03-14  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-cmds.el (dired-get-file-for-visit): Declare.
